--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,50226],[],[[5,0,6,[7],[1,72,8565],[]],[8,0,9,[7],[1,8637,10530],[]],[10,0,11,[7],[1,19167,10464],[]],[12,0,13,[7],[1,29631,10264],[]],[14,0,15,[7],[1,39895,10330],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,21875],[],[[5,0,6,[7],[1,51,21823],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*GeneralTest","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/GeneralTest.robot","*GeneralTest.robot","*<p>General links functionality\x3c/p>","*Verifying &quot;Wat we doen&quot; link","*<p>This test case checks the \"Wat we doen\" link  functionality\x3c/p>","*General links","*Verifying &quot;Vacatures&quot; link","*<p>This test case checks the \"Vacatures\" link  functionality\x3c/p>","*Verifying &quot;Academy&quot; link","*<p>This test case checks the \"Academy\" link  functionality\x3c/p>","*Verifying &quot;Over Cerios&quot; link","*<p>This test case checks the \"Over Cerios\" link  functionality\x3c/p>","*Verifying &quot;Contact&quot; link","*<p>This test case checks the \"Contact\" link  functionality\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ContactForm","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/ContactForm.robot","*ContactForm.robot","*<p>Contact Form Functionality\x3c/p>","*Verifying Contact Form Functionality","*<p>This test case checks the \"Contact Form\" functionality\x3c/p>","*Contact Form"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:50","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:50","fail":0,"label":"General links","pass":5,"skip":0}],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"GeneralTest","name":"GeneralTest","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:22","fail":0,"label":"Contact Form","pass":1,"skip":0}],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"ContactForm","name":"ContactForm","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1746804535569;
+window.output["baseMillis"] = 1746807899772;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 50229;
+window.output["generated"] = 21877;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
