--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,37136],[],[[5,0,6,[7],[1,51,37083],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,40323],[],[[5,0,6,[7],[1,51,40270],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ApplyingForAJob","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/ApplyingForAJob.robot","*ApplyingForAJob.robot","*<p>Applying For A Job Functionality\x3c/p>","*Verifying ability to apply for a job","*<p>This test case checks the \"Applying for a job\" functionality\x3c/p>","*Applying"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ApplyingForAJob","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/ApplyingForAJob.robot","*ApplyingForAJob.robot","*<p>Results\x3c/p>","*Verifying ability to apply for a job","*<p>This test case checks the \"Applying for a job\" functionality\x3c/p>","*Applying"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:37","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:37","fail":0,"label":"Applying","pass":1,"skip":0}],[{"elapsed":"00:00:37","fail":0,"id":"s1","label":"ApplyingForAJob","name":"ApplyingForAJob","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:40","fail":0,"label":"Applying","pass":1,"skip":0}],[{"elapsed":"00:00:40","fail":0,"id":"s1","label":"ApplyingForAJob","name":"ApplyingForAJob","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1746870844127;
+window.output["baseMillis"] = 1746871256972;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 37146;
+window.output["generated"] = 40334;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
