--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,21899],[],[[5,0,6,[7],[1,53,21845],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,49766],[],[[5,0,6,[7],[1,66,8143],[]],[8,0,9,[7],[1,8210,10591],[]],[10,0,11,[7],[1,18802,10439],[]],[12,0,13,[7],[1,29241,9933],[]],[14,0,15,[7],[1,39174,10592],[]]],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ContactForm","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/ContactForm.robot","*ContactForm.robot","*<p>Contact Form Functionality\x3c/p>","*Verifying Contact Form Functionality","*<p>This test case checks the \"Contact Form\" functionality\x3c/p>","*Contact Form"]);
+window.output["strings"] = window.output["strings"].concat(["*","*GeneralLinks","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/GeneralLinks.robot","*GeneralLinks.robot","*<p>General links functionality\x3c/p>","*Verifying &quot;Wat we doen&quot; link","*<p>This test case checks the \"Wat we doen\" link  functionality\x3c/p>","*General links","*Verifying &quot;Vacatures&quot; link","*<p>This test case checks the \"Vacatures\" link  functionality\x3c/p>","*Verifying &quot;Academy&quot; link","*<p>This test case checks the \"Academy\" link  functionality\x3c/p>","*Verifying &quot;Over Cerios&quot; link","*<p>This test case checks the \"Over Cerios\" link  functionality\x3c/p>","*Verifying &quot;Contact&quot; link","*<p>This test case checks the \"Contact\" link  functionality\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:22","fail":0,"label":"Contact Form","pass":1,"skip":0}],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"ContactForm","name":"ContactForm","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:50","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:50","fail":0,"label":"General links","pass":5,"skip":0}],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"GeneralLinks","name":"GeneralLinks","pass":5,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1747228043309;
+window.output["baseMillis"] = 1747228976601;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 21901;
+window.output["generated"] = 49769;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
