--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,49743],[],[[5,0,6,[7],[1,56,8404],[]],[8,0,9,[7],[1,8460,10554],[]],[10,0,11,[7],[1,19014,10384],[]],[12,0,13,[7],[1,29398,10140],[]],[14,0,15,[7],[1,39538,10204],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,40487],[],[[5,0,6,[7],[1,67,40420],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*GeneralLinks","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/GeneralLinks.robot","*GeneralLinks.robot","*<p>General links functionality\x3c/p>","*Verifying &quot;Wat we doen&quot; link","*<p>This test case checks the \"Wat we doen\" link  functionality\x3c/p>","*General links","*Verifying &quot;Vacatures&quot; link","*<p>This test case checks the \"Vacatures\" link  functionality\x3c/p>","*Verifying &quot;Academy&quot; link","*<p>This test case checks the \"Academy\" link  functionality\x3c/p>","*Verifying &quot;Over Cerios&quot; link","*<p>This test case checks the \"Over Cerios\" link  functionality\x3c/p>","*Verifying &quot;Contact&quot; link","*<p>This test case checks the \"Contact\" link  functionality\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ApplyingForAJob","*/Users/fadihaddad/Desktop/test/Valori /Valori Project/Tests/ApplyingForAJob.robot","*ApplyingForAJob.robot","*<p>Applying For A Job Functionality\x3c/p>","*Verifying ability to apply for a job at Valori","*<p>This test case checks the \"Applying for a job\" functionality\x3c/p>","*Applying"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:50","fail":0,"label":"All Tests","pass":5,"skip":0}],[{"elapsed":"00:00:50","fail":0,"label":"General links","pass":5,"skip":0}],[{"elapsed":"00:00:50","fail":0,"id":"s1","label":"GeneralLinks","name":"GeneralLinks","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:40","fail":0,"label":"Applying","pass":1,"skip":0}],[{"elapsed":"00:00:40","fail":0,"id":"s1","label":"ApplyingForAJob","name":"ApplyingForAJob","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1747229344778;
+window.output["baseMillis"] = 1747229558143;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 49747;
+window.output["generated"] = 40490;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
